:white_check_mark: test

--- a/python basic/6-datetimes.ipynb
+++ b/python basic/6-datetimes.ipynb
@@ -18,24 +18,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "When is your birthday (dd/mm/yyyy)?28/02/2033\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "birthday = input('When is your birthday (dd/mm/yyyy)?')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +399,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3-final"
   }
  },
  "nbformat": 4,
