--- a/写作归档(临时)/元宇宙研报.md
+++ b/写作归档(临时)/元宇宙研报.md
@@ -1,5 +1,10 @@
 [TOC]
 
+#### 题目：
+
+1. 元宇宙愿景解构： 身份映射、自由创作与沉浸体验
+2. 后人类在元宇宙会梦见NFT吗
+
 > 概念的补充说明，寻找项目、案例信息，查找数据并进行可视化
 
 #### 区块链世界对元宇宙的误读：
@@ -11,6 +16,8 @@
 #### 对元宇宙的重新定义
 
 本文认为的元宇宙是一种人化自然的继续发展，经由XR(AR/VR/MR)物理设备的链接，网络信息的通联，以及区块链的价值互联网等组合而成的一种生活场景，场景、生活概念的解释。
+
+元宇宙构成要素出现时间表绘制时间图，《技术与文明》，蒸汽机，比特币和元宇宙是技术的集成
 
 如果让我来比喻，最合适的是《三体》中云天明给程心最后的那个小宇宙，解释一下。
 
