--- a/写作归档(临时)/元宇宙三个问题.md
+++ b/写作归档(临时)/元宇宙三个问题.md
@@ -48,7 +48,11 @@
 
 元宇宙近期投融资动态：
 
+投融资动态在其中https://shimo.im/sheets/3DPTC8qdYwkTTRJC，再加上目前的https://shimo.im/sheets/NaUlDgDdEv0Ck6JP中涉及元宇宙的项目，可以看出目前的元宇宙投融资集中在游戏和开发工具上，比如GameCreator获得千万人民币融资，Epic获得10亿美元融资，支持Epic对Metaverse的长期开发，可以看出元宇宙的当下重点仍旧在于游戏。
 
+并且这一轮次的元宇宙热潮中，中国（大陆）脚步并不慢，包栝MetaApp在3月份获得1亿美元的C轮融资，代码乾坤获得字节跳动仅亿元投资，甚至包括互联网品牌也在参与，比如米哈游获得Soul8900万美元的私募配售，主要用于支持Soul在元宇宙方面的探索。
+
+而更值得注意的是，主打VR/AR概念的元宇宙游戏，鉴于XR设备对于元宇宙的作用，这个赛道的项目值得长期关注。比如Somnium Space在2019年获得1百万美元种子轮融资，主打3D / VR / AR 虚拟或增强现实空间概念的MARK.SPACE，以及可以购买，出售和交易映射到真实世界的虚拟财产的Upland在2019年完成2百万美元融资，但目前的投资较为平淡，集中融资在2002年之前，考虑到虚拟现实技术及设备的普及速度，这将是一个较为长远的规划。
 
 ##### 3)元宇宙未来市场发展的趋势或者说展望是什么样的？
 
