--- a/写作归档(临时)/元宇宙研报.md
+++ b/写作归档(临时)/元宇宙研报.md
@@ -4,8 +4,59 @@
 
 1. 元宇宙愿景解构： 身份映射、自由创作与沉浸体验
 2. 后人类在元宇宙会梦见NFT吗
+3. 超元域进化：元宇宙诞生
+
+> [这个技术让人变得越来越内向，整个文明变得越来越内向。我在虚拟现实里什么都能得到，包括你说的，我自己能给自己创造出太空体验，能够代替一切。这确实有可能是一个趋势。我们越来越变成一种很内向的文明，而不是向外去开拓、去探索的文明。](https://www.thepaper.cn/newsDetail_forward_1422325#:~:text=%E8%BF%99%E4%B8%AA%E6%8A%80%E6%9C%AF%E8%AE%A9%E4%BA%BA%E5%8F%98%E5%BE%97%E8%B6%8A%E6%9D%A5%E8%B6%8A%E5%86%85%E5%90%91%EF%BC%8C%E6%95%B4%E4%B8%AA%E6%96%87%E6%98%8E%E5%8F%98%E5%BE%97%E8%B6%8A%E6%9D%A5%E8%B6%8A%E5%86%85%E5%90%91%E3%80%82%E6%88%91%E5%9C%A8%E8%99%9A%E6%8B%9F%E7%8E%B0%E5%AE%9E%E9%87%8C%E4%BB%80%E4%B9%88%E9%83%BD%E8%83%BD%E5%BE%97%E5%88%B0%EF%BC%8C%E5%8C%85%E6%8B%AC%E4%BD%A0%E8%AF%B4%E7%9A%84%EF%BC%8C%E6%88%91%E8%87%AA%E5%B7%B1%E8%83%BD%E7%BB%99%E8%87%AA%E5%B7%B1%E5%88%9B%E9%80%A0%E5%87%BA%E5%A4%AA%E7%A9%BA%E4%BD%93%E9%AA%8C%EF%BC%8C%E8%83%BD%E5%A4%9F%E4%BB%A3%E6%9B%BF%E4%B8%80%E5%88%87%E3%80%82%E8%BF%99%E7%A1%AE%E5%AE%9E%E6%9C%89%E5%8F%AF%E8%83%BD%E6%98%AF%E4%B8%80%E4%B8%AA%E8%B6%8B%E5%8A%BF%E3%80%82%E6%88%91%E4%BB%AC%E8%B6%8A%E6%9D%A5%E8%B6%8A%E5%8F%98%E6%88%90%E4%B8%80%E7%A7%8D%E5%BE%88%E5%86%85%E5%90%91%E7%9A%84%E6%96%87%E6%98%8E%EF%BC%8C%E8%80%8C%E4%B8%8D%E6%98%AF%E5%90%91%E5%A4%96%E5%8E%BB%E5%BC%80%E6%8B%93%E3%80%81%E5%8E%BB%E6%8E%A2%E7%B4%A2%E7%9A%84%E6%96%87%E6%98%8E%E3%80%82)——刘慈欣
 
 > 概念的补充说明，寻找项目、案例信息，查找数据并进行可视化
+
+数字移民（digital immigrant）、数字孪生（digital twin）、数字物种（digital species）
+
+人权、物权、数权
+
+> 技术基础
+
+1. AR/AR：元宇宙的进出通道、关键路径，目前集中在视觉和听觉，未来会在触感、温度和动作上发力，全球2020市场规模120亿美元，中国市场占比55%，全球出货量512万台，目前VR占市场份额68%，AR占32%。
+2. 5G、WIFI6、云计算、边缘计算：人与人在元宇宙内的链接通道，超高清，动态渲染，预加载，永不离线，华为报告单眼分辨率6K，帧率（FPS）90HZ，需要带宽1.4Gbps，而理想状态是16K@180FPS，但5G咋2020年普及率10%，前10国家网速仅200Mbps，仅能支持2K@90FPS
+3. AI、可视化开发套件、一站式开发平台：降低开发难度
+
+*计算、存储和显示将在设备上分离，各自负责自己任务，*元宇宙会包括区块链相关技术，区块链技术短期主要负责NFT经济系统的搭建和运行，长期来看要负担运作基础（公链）、开发平台（制作、众筹和分发平台）和内容平台（Web 3.0）
+
+> 元宇宙存在的问题
+
+1. 网民数量庞大，但同时数字鸿沟差距扩大，世代、地区（北美欧洲94.6%，87.2%，世界平均为59.6%，亚洲和非洲55.1%,39.3%），即使消费级也是巨大负担，使用能力和购买能力差距明显（Oculus Quest 2有望达到1000万台）；
+2. 技术集成难度较大且成本高昂，开发复用性较差，Apple、华为和Microsoft相关标准并不统一，英伟达omniverse需要硬件支持；
+   - 硬件层：芯片（高通）、硬件设备（HoloLens，HTC、Oculus）
+   - 系统层：Facebook、Steam和Sony均自行开发，华为AR Engine
+   - 服务层：开发平台、分发平台
+   - 应用层：2B/2C，2B为智慧教育和医疗，2C为流媒体和游戏。
+   - 硬件、内容、软件和服务市场占比：37%、36%、19%和8%。
+3. 商业系统仍不成熟：元宇宙内NFT交易市场规模过小，而VR游戏盈利模式单一，基本为一次销售终端设备和游戏购买但无爆款和规模效应，主要还是终端销售。
+4. 从绝对数字上看，目前是极少数人的活动，投机性很强，几百人、几千人交易额上百万千万美元。
+
+> 元宇宙特点：
+
+- 开放系统和闭环经济，元宇宙是对所有人开放的虚拟世界，但是经济系统希望尽可能留在系统内循环；
+- 虚拟互动和现实情感，非现实接触行为触发人类的真实情感，设备的进一步发展存在取代现实人与人接触的可能性；
+- 异步加载和同步呈现，多人协作，对网络带宽的需求是海量级的，但是交互需要一并呈现，用户设备性能千差万别；
+- 公共平台和私人创造，元宇宙的平台是开放世界，对所有人开放，但是各“场馆”承载具体场景，是典型的自由之地；
+- 可进入、可触达、可延展和可交互、可创造（PGC&UGC，公司组织负责PGC和街道社区建设，个人负责UGC）
+
+> 游戏是进入元宇宙的入口
+
+- 经济系统，B2C、C2C道具交易==》：NFT
+- 运行基础：中心化互联网平台==》区块链
+
+> Roblox：梦开始的地方
+
+- 2004成立，2006上线《Roblox》，DAU>4000万，最多游戏同时在线570万，开发者>800万，人人可参与，不需要高级编程能力；
+- 2021年3月首次将“Metaverse”写入招股书，并定义八要素：Identity（身份）、Friends（朋友）、Immersiveness（沉浸感）、Low Friction（低延迟）、Variety（多样性）、Anywhere（随地）、Economy（经济）、Civility（文明）
+- 组成：Roblox studio：UGC模块化开放的游戏制作引擎；Roblox Cloud：全球21地区部署21000台服务器并相互直连，每秒并行处理1200万个请求；Roblox客户端：iOS、安卓、PC和Xbox，2000万款游戏
+- 手游收入超10亿美金，分成比例为：平台25%，开发者分享24.5%，平台消耗26%，Roblox分享24.5%，2020年亏损2.5亿美元，原因为开发者分成比例上涨过快，21Q1，开发者收益总额为1.2亿美元，收入超过3万美元的开发者数量接近800个，公司预计21E与社区分享近5亿美元。
+- 2020年3月12日，Roblox和腾讯共同组建罗布乐思，分别持股51%和49%。
+- 用户构成，年龄：9-12岁占比29%，25岁以上仅为15%，5-24岁，约占70%DAU；地域：北美占32%；设备：移动端72%；性别：均衡；使用时间：单用户每日使用时长：153分钟；社交互动：每天平均61条信息，whatapps为50，爆款：Adopt me！最高在线200万。
+- 经济模型：买入Robux比例约为R1=1=0.01，换出比例为R1=1=0.0035
+- 20年12个月中，0.5%的开发和创作者收入在1000万美元以上，0.9%的游戏游玩时间超过1000万小时，超过100万小时的游戏有1504个。Top 10的游戏占玩家37%总游戏时长，10-100名的游戏28%时长，100-1000名游戏仍占据25%时长。
 
 #### 区块链世界对元宇宙的误读：
 
@@ -21,18 +72,42 @@
 
 如果让我来比喻，最合适的是《三体》中云天明给程心最后的那个小宇宙，解释一下。
 
+**现实逻辑线上化，经济系统NFT化，交往行为数字化，元宇宙需要区块链搭建隐私网络保护个人数据、经济系统、乐高积木式的互通协议，一次登录全网运行，用户成为主体。**
+
 #### 三个角度去理解元宇宙
 
-##### 关系映射：最现实可行的路径
+##### 关系映射：最现实可行的路径，数字身份（digital representation）
 
-##### 自由创作：经济激励价值的妙用
+- **派对和房地产，关系+经济活动。**
 
-1. 为什么会去生产UGC内容，《第二人生》
+- 虚拟互动+真实逻辑，比如视频会议、直播和视频社交，真人、实时，数字孪生
+- 时间、娱乐内容以及经济活动（电子商务）。
+- Avator虚拟化身，AI助力人的线上形象，捏脸系统，2021Epic推出MetaHuman Creator数字人类虚拟外表和动作创作
+- Facebook目前已经推出VR社交平台Horizon的测试版，Horizon被认为是Facebook向Metaverse进军的重要一步。
+- NBA总决赛观看人数750万，LOL S赛总决赛观看人数4600万。电子游戏总支出为 1749 亿美元，同比增长 19.6％，是电影和音乐同期总收入的 2 倍。
+- Roblox Lil Nas线上音乐会、Fortnite线上电音节-百大DJ Marshmello、UCB在《我的世界》中举行毕业典礼，堡垒之夜办的 Travis Scott 演唱会，当时有 1230 万名玩家实时在线，看他发新歌。
+- [一是由策展团队与网络社会研究所委托幻境小组 (MetaDAO) 小组，利用去中心化网络平台 Decentraland 重现了 1930-1940 年代的北碚城市风貌计划的雏形，并在虚拟空间中的「北碚」同步进行了一场为期一个月的线上展览](https://www.chainnews.com/articles/535738085826.htm#:~:text=%E4%B8%80%E6%98%AF%E7%94%B1%E7%AD%96%E5%B1%95%E5%9B%A2%E9%98%9F%E4%B8%8E%E7%BD%91%E7%BB%9C%E7%A4%BE%E4%BC%9A%E7%A0%94%E7%A9%B6%E6%89%80%E5%A7%94%E6%89%98%E5%B9%BB%E5%A2%83%E5%B0%8F%E7%BB%84%20(MetaDAO)%20%E5%B0%8F%E7%BB%84%EF%BC%8C%E5%88%A9%E7%94%A8%E5%8E%BB%E4%B8%AD%E5%BF%83%E5%8C%96%E7%BD%91%E7%BB%9C%E5%B9%B3%E5%8F%B0%20Decentraland%20%E9%87%8D%E7%8E%B0%E4%BA%86%201930-1940%20%E5%B9%B4%E4%BB%A3%E7%9A%84%E5%8C%97%E7%A2%9A%E5%9F%8E%E5%B8%82%E9%A3%8E%E8%B2%8C%E8%AE%A1%E5%88%92%E7%9A%84%E9%9B%8F%E5%BD%A2%EF%BC%8C%E5%B9%B6%E5%9C%A8%E8%99%9A%E6%8B%9F%E7%A9%BA%E9%97%B4%E4%B8%AD%E7%9A%84%E3%80%8C%E5%8C%97%E7%A2%9A%E3%80%8D%E5%90%8C%E6%AD%A5%E8%BF%9B%E8%A1%8C%E4%BA%86%E4%B8%80%E5%9C%BA%E4%B8%BA%E6%9C%9F%E4%B8%80%E4%B8%AA%E6%9C%88%E7%9A%84%E7%BA%BF%E4%B8%8A%E5%B1%95%E8%A7%88)
+- 影响力的迁移并不总是成功的，[村上隆就跳挂了](https://www.chainnews.com/articles/700290929750.htm#:~:text=%E4%BC%A0%E7%BB%9F%20IP%20%E5%8F%91,%E6%95%B4%E5%8C%85%E6%8B%8D%E5%8D%96%E3%80%82)。
+
+##### 自由创作：经济激励价值的妙用,沙盒游戏的进化
+
+1. 为什么会去生产UGC内容，[《第二人生》交易额](https://www.chainnews.com/articles/106333679768.htm#:~:text=%E7%BB%8F%E8%90%A5%E3%80%8A%E7%AC%AC%E4%BA%8C%E4%BA%BA%E7%94%9F%E3%80%8B%E7%9A%84%E5%85%AC%E5%8F%B8%E6%9E%97%E7%99%BB%E5%AE%9E%E9%AA%8C%E5%AE%A4%E7%9A%84%20CEO%20Ebbe%20Altberg%20%E6%9B%BE%E5%9C%A8%202016%20%E5%B9%B4%E6%8E%A5%E5%8F%97%E9%87%87%E8%AE%BF%E6%97%B6%E8%A1%A8%E7%A4%BA%EF%BC%8C2015%20%E5%B9%B4%E5%85%B6%E7%94%A8%E6%88%B7%E5%85%B1%E5%85%91%E6%8D%A2%E4%BA%86%206000%20%E4%B8%87%E7%BE%8E%E5%85%83%EF%BC%8C%E6%95%B4%E4%B8%AA%E8%99%9A%E6%8B%9F%E4%B8%96%E7%95%8C%E7%9A%84%20GDP%20%E8%BE%BE%E5%88%B0%205%20%E4%BA%BF%E7%BE%8E%E5%85%83%E3%80%82)，上面售卖的商品高达 5,983,146 件 , 其中大多数都在 5 美元以下
 2. 为什么需要去自主生产，而不是提前搭建，《西部世界》
 3. 怎么生产，持续进行，区块链不仅去中心化，更是带有经济价值，一场兵不血刃的均贫富社会实验
+4. 2[0 世纪 80 年代初，RPG 游戏《创世纪》（Ultima）为玩家提供了一个开放的世界地图，第一次向玩家展现了「开放性世界」，但受限于技术与设计理念等问题，《创世纪》并不完善。真正具备广义上沙盒元素的游戏是 1983 年诞生的《Elite》。在《Elite》里，玩家可以扮演驾驶飞船的宇航员，在宇宙间穿梭，完成各类任务。在这款游戏中，玩家行为开始对游戏生态产生影响。](https://www.chainnews.com/articles/700290929750.htm#:~:text=20%20%E4%B8%96%E7%BA%AA%2080%20%E5%B9%B4%E4%BB%A3%E5%88%9D%EF%BC%8CRPG%20%E6%B8%B8%E6%88%8F%E3%80%8A%E5%88%9B%E4%B8%96%E7%BA%AA%E3%80%8B%EF%BC%88Ultima%EF%BC%89%E4%B8%BA%E7%8E%A9%E5%AE%B6%E6%8F%90%E4%BE%9B%E4%BA%86%E4%B8%80%E4%B8%AA%E5%BC%80%E6%94%BE%E7%9A%84%E4%B8%96%E7%95%8C%E5%9C%B0%E5%9B%BE%EF%BC%8C%E7%AC%AC%E4%B8%80%E6%AC%A1%E5%90%91%E7%8E%A9%E5%AE%B6%E5%B1%95%E7%8E%B0%E4%BA%86%E3%80%8C%E5%BC%80%E6%94%BE%E6%80%A7%E4%B8%96%E7%95%8C%E3%80%8D%EF%BC%8C%E4%BD%86%E5%8F%97%E9%99%90%E4%BA%8E%E6%8A%80%E6%9C%AF%E4%B8%8E%E8%AE%BE%E8%AE%A1%E7%90%86%E5%BF%B5%E7%AD%89%E9%97%AE%E9%A2%98%EF%BC%8C%E3%80%8A%E5%88%9B%E4%B8%96%E7%BA%AA%E3%80%8B%E5%B9%B6%E4%B8%8D%E5%AE%8C%E5%96%84%E3%80%82%E7%9C%9F%E6%AD%A3%E5%85%B7%E5%A4%87%E5%B9%BF%E4%B9%89%E4%B8%8A%E6%B2%99%E7%9B%92%E5%85%83%E7%B4%A0%E7%9A%84%E6%B8%B8%E6%88%8F%E6%98%AF%201983%20%E5%B9%B4%E8%AF%9E%E7%94%9F%E7%9A%84%E3%80%8AElite%E3%80%8B%E3%80%82%E5%9C%A8%E3%80%8AElite%E3%80%8B%E9%87%8C%EF%BC%8C%E7%8E%A9%E5%AE%B6%E5%8F%AF%E4%BB%A5%E6%89%AE%E6%BC%94%E9%A9%BE%E9%A9%B6%E9%A3%9E%E8%88%B9%E7%9A%84%E5%AE%87%E8%88%AA%E5%91%98%EF%BC%8C%E5%9C%A8%E5%AE%87%E5%AE%99%E9%97%B4%E7%A9%BF%E6%A2%AD%EF%BC%8C%E5%AE%8C%E6%88%90%E5%90%84%E7%B1%BB%E4%BB%BB%E5%8A%A1%E3%80%82%E5%9C%A8%E8%BF%99%E6%AC%BE%E6%B8%B8%E6%88%8F%E4%B8%AD%EF%BC%8C%E7%8E%A9%E5%AE%B6%E8%A1%8C%E4%B8%BA%E5%BC%80%E5%A7%8B%E5%AF%B9%E6%B8%B8%E6%88%8F%E7%94%9F%E6%80%81%E4%BA%A7%E7%94%9F%E5%BD%B1%E5%93%8D%E3%80%82)
+5. **创作类型：二创、MOD、家园、沙盒、UGC**,例子和数据
+6. The Sandbox 和蓝精灵，Atari，过山车大亨，Care Bears 和 Shaun the Sheep 等达成了战略合作，也间接反映 NFT 在逐步主流化。今年 2 月，Axie Infinity 建立了自己的侧链 Ronin，并已成为 LAND 和其他资产的迁移。同样，Decentraland 也打通了到 Polygon 的通道。
+7. The Sims 4》是一款人生模拟游戏，让玩家享受创造和掌控人生的奇妙力量。在《The Sims 4》中体验创意无限、幽默风趣、遁世归隐和自由自在的游戏人生,EA出品的3A级沙盒游戏，不是方的。
+8. 比较The Sandbox等几款沙盒游戏数据并可视化。[分析示例](https://www.chainnews.com/articles/053259958544.htm#:~:text=The%20Sandbox%EF%BC%8CDecentraland%2C%20Axie%20Infinity)
+9. P2E模式对数字劳工的反击，真能从平台手中获取收益。
 
-##### 沉浸体验：对人类生活时间的争夺
+##### 沉浸体验：对人类生活时间的争夺，
 
 1. 与自然搏斗，人的进化
 2. 在社会中生存，人的社会化
 3. 在元宇宙中畅游，《黑镜》、意识上传
+4. 拟真，Epic发布unreal 5，第一，Nanite虚拟微多边形几何体可以创建出真实的几何体细节，第二，Lumen虚拟光追技术可以在无硬件支持的情况下模拟出真实的物体在光线下的状态
+5. [Axie Infinity](https://www.chainnews.com/articles/218225704271.htm#:~:text=Axie%20Infinity%20%E6%98%AF%E4%B8%80%E6%AC%BE%E5%8F%97%20Pok%C3%A8mon%20%E5%90%AF%E5%8F%91%E7%9A%84%E6%95%B0%E5%AD%97%E5%AE%A0%E7%89%A9%E6%B8%B8%E6%88%8F%EF%BC%8C%E7%94%A8%E6%88%B7%E5%8F%AF%E4%BB%A5%E5%9C%A8%E9%87%8C%E9%9D%A2%E4%BA%A4%E6%98%93%E3%80%81%E7%B9%81%E8%82%B2%E3%80%81%E6%88%98%E6%96%97%EF%BC%8C%E7%94%9A%E8%87%B3%E5%BC%80%E5%8F%91%E8%99%9A%E6%8B%9F%E6%88%BF%E5%9C%B0%E4%BA%A7%E3%80%82%E5%9C%A8%E5%81%A5%E5%85%A8%E7%9A%84%E7%BB%8F%E6%B5%8E%E6%94%AF%E6%9F%B1%E5%92%8C%E7%83%AD%E6%83%85%E7%9A%84%E7%94%A8%E6%88%B7%E5%9F%BA%E7%A1%80%E7%9A%84%E6%8E%A8%E5%8A%A8%E4%B8%8B%EF%BC%8C%E5%AE%83%E4%BC%BC%E4%B9%8E%E6%AD%A3%E5%9C%A8%E8%BF%9B%E5%85%A5%E6%8A%9B%E7%89%A9%E7%BA%BF%E5%BC%8F%E5%A2%9E%E9%95%BF%E9%98%B6%E6%AE%B5%E3%80%82Axie%20%E5%8F%AF%E8%83%BD%E6%98%AF%E6%88%91%E4%BB%AC%E6%9C%80%E5%A5%BD%E7%9A%84%E6%B8%B8%E6%88%8F%E4%BE%8B%E5%AD%90%EF%BC%8C%E5%B1%95%E7%A4%BA%E4%BA%86%20crypto%20%E7%BB%8F%E6%B5%8E%E6%9C%BA%E7%90%86%E7%9A%84%E5%A8%81%E5%8A%9B%EF%BC%8C%E7%89%B9%E5%88%AB%E6%98%AF%E5%9C%A8%E5%BC%95%E5%AF%BC%E7%94%A8%E6%88%B7%E5%8A%A0%E5%85%A5%EF%BC%882020%20%E5%B9%B4%E7%94%A8%E6%88%B7%E5%9F%BA%E6%95%B0%E5%A2%9E%E9%95%BF%E4%BA%86%2011.6%20%E5%80%8D%EF%BC%89%E3%80%81%E6%8F%90%E5%8D%87%E7%94%A8%E6%88%B7%E5%BF%A0%E8%AF%9A%E5%BA%A6%E5%92%8C%E4%BC%A0%E6%92%AD%E6%B8%B8%E6%88%8F%E7%9A%84%E6%BF%80%E5%8A%B1%E7%BB%93%E6%9E%84%E6%96%B9%E9%9D%A2%E3%80%82)，更长时间的沉浸在游戏环境中，另一种是从硬件层面的“包裹”，比如VR设备。[数据汇总1](https://dappradar.com/ethereum/games/axie-infinity)，[数据汇总2](https://pro.nansen.ai/dashboard/152),Blackpool Finance （一个加密资产对冲基金），也在组建自己的 Axie 战队，购买 Axie 土地地盘，招兵买马，创造收益。
+6. Play2Earn 赚取收益（玩家 70%，Guild 10%，Scholar Manager 20%），菲律宾最低工资水平为 200 刀，每个业余 Axie Infinity 玩家每天平均可赚 200SLP （Small Love Potion），按照 SLP 之前高价，每个月可以赚 1200 刀以上，是他们本身收入水平的 6 倍，即使按照 SLP 现有价格（0.048USDT）来算，也是要超出其最低工资水平。
+7. 2017 年，英伟达就推出了一项基于 VR 技术的工具 Holodeck，设计师可以在 VR 的环境中看到虚拟世界中的建模、光线等内容的表现效果与参数，算是为「进入」虚拟世界铺好了道路。2021 年 4 月，英伟达 GTC 大会上，黄仁勋对 Omniverse 进行了展示 ， 一个被称为「工程师的元宇宙」的虚拟工作平台。Omni为“全”。
+8.  Decentraland、Cryptovoxels、Somnium Space 和 The Sandbox像房地产
