--- a/写作归档(临时)/正文.md
+++ b/写作归档(临时)/正文.md
@@ -1,7 +1,3 @@
-这个技术让人变得越来越内向，整个文明变得越来越内向。我在虚拟现实里什么都能得到，包括你说的，我自己能给自己创造出太空体验，能够代替一切。这确实有可能是一个趋势。我们越来越变成一种很内向的文明，而不是向外去开拓、去探索的文明。——刘慈欣
-
-那如果元宇宙带有自由开放的探索精神呢？比如UGC生产内容，每个人都可以构建属于自己的精神家园。
-
 ### 元宇宙究竟是什么：一个历史的维度
 
 #### 康波的大气候和互联网发展的小气候
@@ -174,11 +170,27 @@ The Sandbox 和蓝精灵，Atari，过山车大亨，Care Bears 和 Shaun the Sh
 
 此外，还有unreal 5，更新后的虚幻引擎有两大重要进步点，第一，Nanite虚拟微多边形几何体可以创建出真实的几何体细节，第二，Lumen虚拟光追技术可以在无硬件支持的情况下模拟出真实的物体在光线下的状态。![unreal 5](https://cdn.jsdelivr.net/gh/meininghang/image-hosting@main/20210330/unreal 5.7a3q12yb1fc0.png)
 
-- 多个元宇宙还是一个元宇宙？
-- 公链发展速度，NFT架构区块链，但是游戏本体还需要互联网
-- 
+至此，我们基本梳理了元宇宙概念的诞生、特点、存在的问题以及运作模式，其中的重点在于加密世界对于实现元宇宙的重要性，去中心化的经济体系，DAO组织的UGC内容生产，以及区块链对隐私、数据的确权作用。
 
-投融资动态：
+### 做什么能促进元宇宙的进化
 
-- 投资重点
-- Metaverse经济规模能有多大？
+> 这个技术让人变得越来越内向，整个文明变得越来越内向。我在虚拟现实里什么都能得到，包括你说的，我自己能给自己创造出太空体验，能够代替一切。这确实有可能是一个趋势。我们越来越变成一种很内向的文明，而不是向外去开拓、去探索的文明。——刘慈欣
+
+如果我们希望在实现元宇宙的同时规避人类的内向倾向，我们还需要什么？
+
+我们要避免元宇宙割裂，不管是多个元宇宙还是一个类似绿洲的元宇宙，都应该是底层协议互通，经济体系可互联，NFT可交换。如果以Roblox为标的，那么要
+
+- 持续关注公链的发展，最起码要达到Roblox的响应速度。
+- 关注low-code等开发工具，最起码实现Roblox的1/5玩家都是开发者水平。
+- 关注DAO的PUGC内容生产，UGC并不等同于低质量和无序。
+- 关注社交属性的加密游戏，真正实现链游破圈效应。
+
+投融资动态：![投融资动态](https://cdn.jsdelivr.net/gh/meininghang/image-hosting@main/20210330/投融资动态.61r13vbt2b40.png)
+
+以此为标准，我们认为有如下的投资重点方向：
+
+- 基础设施类：钱包、开发平台、基础协议、公链
+- 游戏娱乐类：沙盒游戏、开放世界和模拟游戏是，以及流媒体和电子竞技
+- 组织内容类：DAO、众筹发行平台、粉丝社交平台
+
+最后，来畅想一下Metaverse经济规模能有多大，如果元宇宙会把全人类包裹进去，那么最终就是整个人类文明的终极形态。![Metaverse涉及经济指标](https://cdn.jsdelivr.net/gh/meininghang/image-hosting@main/20210330/Metaverse涉及经济指标.4lwg5fm1f8q0.png)
