--- a/AI数学基础/🚗价格预测.ipynb
+++ b/AI数学基础/🚗价格预测.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "markdown",
    "id": "daa8a5b7-2317-487f-a861-485dd44a35fe",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# 数据读取与分析"
    ]
@@ -12,7 +16,11 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "ee07ff2a-865f-452e-bad4-f8d3da16fadc",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -70,7 +78,11 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "f60a6284-2372-4d54-a05f-963eef2d8639",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -117,7 +129,11 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "e0283740-8da7-4260-ba95-857338f53b35",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -350,7 +366,11 @@
   {
    "cell_type": "markdown",
    "id": "ba554230-21ed-4c13-98e4-ecbb20801119",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "一个较小的数据集：只有205条数据，26个特征。"
    ]
@@ -359,7 +379,11 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "0de46786-fb5c-4b33-bc05-8268d2908dc7",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -583,7 +607,11 @@
   {
    "cell_type": "markdown",
    "id": "bdf75505-4014-462c-a36f-f0161d441c4f",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# 缺失值处理"
    ]
@@ -592,7 +620,11 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "348ef252-c429-4540-bbbf-b8089ba0a604",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -626,7 +658,11 @@
   {
    "cell_type": "markdown",
    "id": "a986daeb-1f2e-4d67-8389-843c0899d53e",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "normalized-losses 缺失比较严重"
    ]
@@ -635,7 +671,11 @@
    "cell_type": "code",
    "execution_count": 14,
    "id": "a20c2c64-7bd0-4cf2-a6d7-d310a395c6a2",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -860,7 +900,11 @@
    "cell_type": "code",
    "execution_count": 17,
    "id": "4ae38abc-90ca-4830-83dc-16fb079d3f29",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -896,7 +940,11 @@
    "cell_type": "code",
    "execution_count": 18,
    "id": "79b2885c-7bb1-4859-af89-fb8ba3cf4ef3",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1035,7 +1083,11 @@
    "cell_type": "code",
    "execution_count": 20,
    "id": "bdc86da0-47a0-4074-91cf-8fcde3901bd6",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1283,7 +1335,11 @@
   {
    "cell_type": "markdown",
    "id": "ef7d6a09-88cb-47a2-a059-9b48920ec413",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# 特征相关性"
    ]
@@ -1292,7 +1348,11 @@
    "cell_type": "code",
    "execution_count": 21,
    "id": "435e25f1-3747-423d-8e6b-2e5c627d9780",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1678,7 +1738,11 @@
    "cell_type": "code",
    "execution_count": 23,
    "id": "6eefd0c8-7f18-4e27-b161-cfa783d1dfbe",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -2064,7 +2128,11 @@
    "cell_type": "code",
    "execution_count": 24,
    "id": "9f569bd7-c9d1-46da-a068-1efa5d25c6cf",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -2097,7 +2165,11 @@
    "cell_type": "code",
    "execution_count": 25,
    "id": "7ddf5de8-027e-4d1c-8418-96c6179b5763",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -2228,7 +2300,11 @@
    "cell_type": "code",
    "execution_count": 27,
    "id": "e0fff7e7-c876-4c10-831d-3d9980168cf6",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -2348,7 +2424,11 @@
   {
    "cell_type": "markdown",
    "id": "dce6f5b2-4c60-4a35-80d8-f856f8817948",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "相关性过高取其一即可，某些参数，如长宽高可合并。"
    ]
@@ -2357,18 +2437,22 @@
    "cell_type": "code",
    "execution_count": 32,
    "id": "6bbde596-e184-462d-9d4f-5eb91094c283",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "ename": "AttributeError",
      "evalue": "'DataFrame' object has no attribute 'length'",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [32]\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0m data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mvolume\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[43mdata\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlength\u001b[49m \u001b[38;5;241m*\u001b[39m data\u001b[38;5;241m.\u001b[39mwidth \u001b[38;5;241m*\u001b[39m data\u001b[38;5;241m.\u001b[39mheight\n\u001b[1;32m      3\u001b[0m data\u001b[38;5;241m.\u001b[39mdrop([\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mwidth\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlength\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mheight\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcurb-weight\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcity-mpg\u001b[39m\u001b[38;5;124m'\u001b[39m],axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m,inplace\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
-      "File \u001b[0;32m~/env/lib/python3.8/site-packages/pandas/core/generic.py:5583\u001b[0m, in \u001b[0;36mNDFrame.__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   5576\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m (\n\u001b[1;32m   5577\u001b[0m     name \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_internal_names_set\n\u001b[1;32m   5578\u001b[0m     \u001b[38;5;129;01mand\u001b[39;00m name \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_metadata\n\u001b[1;32m   5579\u001b[0m     \u001b[38;5;129;01mand\u001b[39;00m name \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_accessors\n\u001b[1;32m   5580\u001b[0m     \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_info_axis\u001b[38;5;241m.\u001b[39m_can_hold_identifiers_and_holds_name(name)\n\u001b[1;32m   5581\u001b[0m ):\n\u001b[1;32m   5582\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m[name]\n\u001b[0;32m-> 5583\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mobject\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[38;5;21;43m__getattribute__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mname\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'length'"
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
+      "Input \u001B[0;32mIn [32]\u001B[0m, in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[0;32m----> 1\u001B[0m data[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mvolume\u001B[39m\u001B[38;5;124m'\u001B[39m] \u001B[38;5;241m=\u001B[39m \u001B[43mdata\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mlength\u001B[49m \u001B[38;5;241m*\u001B[39m data\u001B[38;5;241m.\u001B[39mwidth \u001B[38;5;241m*\u001B[39m data\u001B[38;5;241m.\u001B[39mheight\n\u001B[1;32m      3\u001B[0m data\u001B[38;5;241m.\u001B[39mdrop([\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mwidth\u001B[39m\u001B[38;5;124m'\u001B[39m, \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mlength\u001B[39m\u001B[38;5;124m'\u001B[39m, \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mheight\u001B[39m\u001B[38;5;124m'\u001B[39m,\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mcurb-weight\u001B[39m\u001B[38;5;124m'\u001B[39m,\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mcity-mpg\u001B[39m\u001B[38;5;124m'\u001B[39m],axis\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m1\u001B[39m,inplace\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mTrue\u001B[39;00m)\n",
+      "File \u001B[0;32m~/env/lib/python3.8/site-packages/pandas/core/generic.py:5583\u001B[0m, in \u001B[0;36mNDFrame.__getattr__\u001B[0;34m(self, name)\u001B[0m\n\u001B[1;32m   5576\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m (\n\u001B[1;32m   5577\u001B[0m     name \u001B[38;5;129;01mnot\u001B[39;00m \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_internal_names_set\n\u001B[1;32m   5578\u001B[0m     \u001B[38;5;129;01mand\u001B[39;00m name \u001B[38;5;129;01mnot\u001B[39;00m \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_metadata\n\u001B[1;32m   5579\u001B[0m     \u001B[38;5;129;01mand\u001B[39;00m name \u001B[38;5;129;01mnot\u001B[39;00m \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_accessors\n\u001B[1;32m   5580\u001B[0m     \u001B[38;5;129;01mand\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_info_axis\u001B[38;5;241m.\u001B[39m_can_hold_identifiers_and_holds_name(name)\n\u001B[1;32m   5581\u001B[0m ):\n\u001B[1;32m   5582\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28mself\u001B[39m[name]\n\u001B[0;32m-> 5583\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28;43mobject\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[38;5;21;43m__getattribute__\u001B[39;49m\u001B[43m(\u001B[49m\u001B[38;5;28;43mself\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mname\u001B[49m\u001B[43m)\u001B[49m\n",
+      "\u001B[0;31mAttributeError\u001B[0m: 'DataFrame' object has no attribute 'length'"
      ]
     }
    ],
@@ -2382,7 +2466,11 @@
    "cell_type": "code",
    "execution_count": 33,
    "id": "d621c77e-3364-4351-adc0-f5f697392993",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -2408,7 +2496,11 @@
    "cell_type": "code",
    "execution_count": 36,
    "id": "74513e21-0a4e-45a5-8d79-a6c23cfc0316",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -2441,7 +2533,11 @@
    "cell_type": "code",
    "execution_count": 37,
    "id": "ac5bbd76-aa33-415f-bdca-cbb8771f03a8",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -2471,7 +2567,11 @@
   {
    "cell_type": "markdown",
    "id": "c0d987b5-2fdb-4e51-8efd-15e1971144f9",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "查看两个变量之间的关系"
    ]
@@ -2480,7 +2580,11 @@
    "cell_type": "code",
    "execution_count": 39,
    "id": "1aef935a-16d7-4f06-9031-dddfbe99c6d2",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -2510,7 +2614,11 @@
   {
    "cell_type": "markdown",
    "id": "b817470c-a2fd-404b-94d9-f68bce1597d2",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# 预处理"
    ]
@@ -2518,7 +2626,11 @@
   {
    "cell_type": "markdown",
    "id": "ee93f70e-1bb4-4b29-b208-964d3ba02173",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## 对连续值进行标准化"
    ]
@@ -2527,7 +2639,11 @@
    "cell_type": "code",
    "execution_count": 40,
    "id": "27614e2b-033f-4b48-b967-f5599d51acde",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -2735,7 +2851,11 @@
   {
    "cell_type": "markdown",
    "id": "5ee0efdf-2c20-4a4a-93d8-1286cf168014",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "对离散值进行one-hot编码"
    ]
@@ -2744,7 +2864,11 @@
    "cell_type": "code",
    "execution_count": 41,
    "id": "705cb9e7-9017-437e-bb29-7733cd46d288",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -3224,7 +3348,11 @@
   {
    "cell_type": "markdown",
    "id": "d665594d-e275-4af1-8a89-3c4700d709d4",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "划分数据集"
    ]
@@ -3233,7 +3361,11 @@
    "cell_type": "code",
    "execution_count": 42,
    "id": "3e7e8d5d-3a0f-4546-80a5-a7fb1684011c",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -3252,7 +3384,11 @@
   {
    "cell_type": "markdown",
    "id": "06195b29-8c78-4deb-8f81-5d70666bcb8e",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Lasso回归"
    ]
@@ -3260,7 +3396,11 @@
   {
    "cell_type": "markdown",
    "id": "11c9d35b-7522-437e-8ea9-fcabe7e2c148",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "多加了一个绝对值来惩罚过大的系数，α=0就是OLS"
    ]
@@ -3269,7 +3409,11 @@
    "cell_type": "code",
    "execution_count": 47,
    "id": "1c1441d8-ffe9-4db4-9e4a-b5a77984deab",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "alphas = 2. ** np.arange(2,12)\n",
@@ -3285,7 +3429,11 @@
    "cell_type": "code",
    "execution_count": 49,
    "id": "2e00a59e-28d9-429a-81b9-7719f0b13010",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -3321,7 +3469,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4891b432-6266-413c-bb71-4bae89e01d94",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   }
